--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "typescript": "^4.7.3"
   },
   "dependencies": {
-    "axios": "^1.7.7"
+    "axios": "^1.7.7",
+    "@shopify/storefront-api-client": "^1.0.2"
   }
 }
